syntax = "proto3";

package messaging.v1;

option go_package = "github.com/m1thrandir225/meridian/internal/messaging/infrastructure/api;messagingpb";


service MessagingService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
}

message SendMessageRequest {
  string content = 1;
  string sender_id = 2;
  string sender_type = 3; // "user" or "integration"
  string sender_name = 4;
  repeated string target_channel_ids = 5;
  string message_type = 6; // "direct", "integration_webhook", etc.
  map<string, string> metadata = 7;
}

message MessageResponse {
  bool success = 1;
  string message_id = 2;
  string message_content = 4;
  repeated string target_channel_ids = 5;
  string sender_id = 6;
  string sender_type = 7;
}

message SendMessageResponse {
  bool success = 1;
  repeated MessageResponse responses = 2;
}

message MessageContent {
  string text = 1;
  repeated string mentions = 2;
  repeated string links = 3;
  bool formatted = 4;
}

message Reaction {
  string id = 1;
  string message_id = 2;
  string user_id = 3;
  string reaction_type = 4;
  string created_at = 5;
}
